@@ -19,9 +19,9 @@ GetCEL=41
 PutCEL=53
 
 [DrawArea]
-Zoom=2
-ZoomLeft=-112
-ZoomTop=-83
+Zoom=4
+ZoomLeft=58
+ZoomTop=93
 
 [BasicControls]
 Tool0=DRAW
@@ -30,7 +30,7 @@ Tool2=LINE
 Tool3=CIRCLE
 Tool4=SEP.
 Tool5=FILLTO
-ActiveTool=1
+ActiveTool=2
 Ink0=OPAQUE
 Ink1=OPAQUE
 Ink2=L GRAD
@@ -39,7 +39,7 @@ Ink4=H GRAD
 Ink5=H GRAD
 ActiveInk=0
 FillShapes=Yes
-ClearKeyColor=No
+ClearKeyColor=Yes
 UseAlpha=No
 
 [Settings]
@@ -55,5 +55,5 @@ Selected4=4
 Selected5=5
 Selected6=6
 Selected7=7
-ActiveColor=2
+ActiveColor=4
 
